exports[`test A.js 1`] = `
"declare module A {
  declare function foo(): string;
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
declare module A {
  declare function foo(): string;
}"
`;

exports[`test B.js 1`] = `
"/**
 * @providesModule B
 * @flow
 */

module.exports = require(\'A\');
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/**
 * @providesModule B
 * @flow
 */

module.exports = require(\"A\");"
`;

exports[`test C.js 1`] = `
"/**
 * @providesModule C
 * @flow
 */

module.exports = require(\'B\');
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/**
 * @providesModule C
 * @flow
 */

module.exports = require(\"B\");"
`;

exports[`test D.js 1`] = `
"/**
 * @providesModule D
 * @flow
 */

var bar1: string = require(\'A\');
var bar2: string = require(\'B\');
var bar3: string = require(\'C\');
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/**
 * @providesModule D
 * @flow
 */

var bar1: string = require(\"A\");
var bar2: string = require(\"B\");
var bar3: string = require(\"C\");"
`;
